--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "bundleDependencies": false,
   "dependencies": {
     "dayjs": "^1.10.3",
-    "got": "^11.8.2"
+    "got": "^11.8.2",
+    "typescript-memoize": "^1.0.1"
   },
   "deprecated": false,
   "description": "Cpay REST API",
@@ -28,5 +29,5 @@
     "publish:patch": "npm version patch && npm publish",
     "deploy": "npm run build && npm publish"
   },
-  "version": "1.0.1"
+  "version": "1.0.2"
 }
