--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "author": {
-    "name": "cpay"
+    "name": "finvaro"
   },
   "bugs": {
-    "url": "https://github.com/cpayhq/cpay-node-sdk/issues"
+    "url": ""
   },
   "bundleDependencies": false,
   "dependencies": {
@@ -12,22 +12,22 @@
     "typescript-memoize": "^1.1.1"
   },
   "deprecated": false,
-  "description": "Cpay REST API",
+  "description": "Finvaro REST API",
   "devDependencies": {
     "typescript": "^4.1.3"
   },
-  "homepage": "https://github.com/cpayhq/cpay-node-sdk#readme",
+  "homepage": "",
   "license": "ISC",
   "main": "lib/index.js",
-  "name": "cpay-node-api-sdk",
+  "name": "finvaro-node-api-sdk",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/cpayhq/cpay-node-sdk"
+    "url": ""
   },
   "scripts": {
     "build": "tsc --build tsconfig.json",
     "publish:patch": "npm version patch && npm publish",
     "deploy": "npm run build && npm publish"
   },
-  "version": "1.7.7"
+  "version": "1.0.0"
 }
