feat: update lib, #CRYP-2497

--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "bugs": {
     "url": ""
   },
-  "bundleDependencies": false,
+  "bundleDependencies": [],
   "dependencies": {
     "dayjs": "^1.10.3",
     "got": "^11.8.2",
+    "lodash": "^4.17.21",
     "typescript-memoize": "^1.1.1"
   },
   "deprecated": false,
@@ -29,5 +30,5 @@
     "publish:patch": "npm version patch && npm publish",
     "deploy": "npm run build && npm publish"
   },
-  "version": "1.0.0"
+  "version": "1.1.0"
 }
