--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "author": {
-    "name": "finvaro"
+    "name": "clarnium"
   },
   "bugs": {
     "url": ""
@@ -13,14 +13,14 @@
     "typescript-memoize": "^1.1.1"
   },
   "deprecated": false,
-  "description": "Finvaro REST API",
+  "description": "Clarnium REST API",
   "devDependencies": {
     "typescript": "^4.1.3"
   },
   "homepage": "",
   "license": "ISC",
   "main": "lib/index.js",
-  "name": "finvaro-node-api-sdk",
+  "name": "clarnium-node-api-sdk",
   "repository": {
     "type": "git",
     "url": ""
@@ -30,5 +30,5 @@
     "publish:patch": "npm version patch && npm publish",
     "deploy": "npm run build && npm publish"
   },
-  "version": "1.1.0"
+  "version": "1.0.0"
 }
