--- a/package.json
+++ b/package.json
@@ -1,9 +1,6 @@
 {
   "author": {
-    "name": "cpay"
-  },
-  "bugs": {
-    "url": "https://github.com/cpayhq/cpay-node-sdk/issues"
+    "name": "geme"
   },
   "bundleDependencies": [],
   "dependencies": {
@@ -13,22 +10,17 @@
     "typescript-memoize": "^1.1.1"
   },
   "deprecated": false,
-  "description": "Cpay REST API",
+  "description": "GEME REST API",
   "devDependencies": {
     "typescript": "^4.1.3"
   },
-  "homepage": "https://github.com/cpayhq/cpay-node-sdk#readme",
   "license": "ISC",
   "main": "lib/index.js",
-  "name": "cpay-node-api-sdk",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/cpayhq/cpay-node-sdk"
-  },
+  "name": "geme-node-api-sdk",
   "scripts": {
     "build": "tsc --build tsconfig.json",
     "publish:patch": "npm version patch && npm publish",
     "deploy": "npm run build && npm publish"
   },
-  "version": "2.0.5"
+  "version": "1.0.0"
 }
