--- a/package.json
+++ b/package.json
@@ -1,34 +1,34 @@
 {
-  "author": {
-    "name": "cpay"
-  },
-  "bugs": {
-    "url": "https://github.com/cpayhq/cpay-node-sdk/issues"
-  },
-  "bundleDependencies": [],
-  "dependencies": {
-    "dayjs": "^1.10.3",
-    "got": "^11.8.2",
-    "lodash": "^4.17.21",
-    "typescript-memoize": "^1.1.1"
-  },
-  "deprecated": false,
-  "description": "Cpay REST API",
-  "devDependencies": {
-    "typescript": "^4.1.3"
-  },
-  "homepage": "https://github.com/cpayhq/cpay-node-sdk#readme",
-  "license": "ISC",
-  "main": "lib/index.js",
-  "name": "cpay-node-api-sdk",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/cpayhq/cpay-node-sdk"
-  },
-  "scripts": {
-    "build": "tsc --build tsconfig.json",
-    "publish:patch": "npm version patch && npm publish",
-    "deploy": "npm run build && npm publish"
-  },
-  "version": "2.0.6"
+    "author": {
+        "name": "cryptoNow"
+    },
+    "bugs": {
+        "url": ""
+    },
+    "bundleDependencies": [],
+    "dependencies": {
+        "dayjs": "^1.10.3",
+        "got": "^11.8.2",
+        "lodash": "^4.17.21",
+        "typescript-memoize": "^1.1.1"
+    },
+    "deprecated": false,
+    "description": "CryptoNow REST API",
+    "devDependencies": {
+        "typescript": "^4.1.3"
+    },
+    "homepage": "",
+    "license": "ISC",
+    "main": "lib/index.js",
+    "name": "cryptoNow-node-api-sdk",
+    "repository": {
+        "type": "git",
+        "url": ""
+    },
+    "scripts": {
+        "build": "tsc --build tsconfig.json",
+        "publish:patch": "npm version patch && npm publish",
+        "deploy": "npm run build && npm publish"
+    },
+    "version": "2.0.6"
 }
