--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,17 @@
 {
-    "compilerOptions": {
-        "allowSyntheticDefaultImports": true,
-        "experimentalDecorators": true,
-        "esModuleInterop": true,    
-        "declaration": true,
-        "target": "es6",                     
-        "module": "CommonJS",
-        "moduleResolution": "node",
-        "lib":["es2018"],                
-        "outDir": "./lib",   
-        "baseUrl": ".",
-        "paths": {
-        },
-        "skipLibCheck": true
-    },
-    "exclude": [
-        "lib",
-        "node_modules"
-    ]
+  "compilerOptions": {
+    "allowSyntheticDefaultImports": true,
+    "experimentalDecorators": true,
+    "esModuleInterop": true,
+    "declaration": true,
+    "target": "es6",
+    "module": "CommonJS",
+    "moduleResolution": "node",
+    "lib": ["es2018"],
+    "outDir": "./lib",
+    "baseUrl": ".",
+    "paths": {},
+    "skipLibCheck": true
+  },
+  "exclude": ["lib", "node_modules"]
 }
